------------------------------------------------------------------------------

Chan_unistim changes
--------------------
 * Added ability to use multiple lines on phone, so for one device in 
   configuration multiple lines can be defined, it allows to have multiple calls
   on one phone, callwaiting and switching between calls.
 * Added option 'sharpdial' allowing end dialing by pressing # key
 * Added options 'cwstyle', 'cwvolume' controlling callwaiting appearance
 * Added global 'debug' option, that enables debug in channel driver
 * Added ability for translation on-screen menu to multiple languages. Tested on
   Russian languages.  Supported encodings: ISO 8859-1, ISO 8859-2, ISO 8859-4, 
   ISO 8859-5, ISO 2022-JP. Language controlled by 'language' and on-screen 
   menu of phone
 * In addition to English added French and Russian languages for on-screen menus
 * Reworked dialing number input: added dialing by timeout, immediate dial on 
   on dialplan compare, phone number length now not limited by screen size
 * Added ability for pickup a call using fetures.conf defined value and 
   on-screen key

Codec changes
-------------
 * Codec lists may now be modified by the '!' character, to allow succinct
   specification of a list of codecs allowed and disallowed, without the
   requirement to use two different keywords.  For example, to specify all
   codecs except g729 and g723, one need only specify allow=all,!g729,!g723.

Music On Hold Changes
---------------------
 * Added 'announcement' option which will play at the start of MOH and between
   songs in modes of MOH that can detect transitions between songs (eg.
   files, mp3, etc).

Queue changes
-------------
 * Added queue options autopausebusy and autopauseunavail for automatically
   pausing a queue member when their device reports busy or congestion.
 * The 'ignorebusy' option for queue members has been deprecated in favor of
   the option 'ringinuse. Also a 'queue set ringinuse' CLI command has been